--- a/PrettyTunnel/PrettyTunnel.entitlements
+++ b/PrettyTunnel/PrettyTunnel.entitlements
@@ -2,10 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>get-task-allow</key>
+	<true/>
 	<key>com.apple.SystemConfiguration.SCDynamicStore-write-access</key>
 	<true/>
 	<key>com.apple.SystemConfiguration.SCPreferences-write-access</key>
 	<array>
 		<string>preferences.plist</string>
-	</array></dict>
+	</array>
+</dict>
 </plist>
